@@ -5,10 +5,10 @@
 #  This file sets up environment variables that are needed for 
 #  processing Ensembl transcript sequences
 #
-# The following config settings change between loads:
-# 1) APP_INFILES
-# 2) SEQ_RELEASE_DATE
-# 3) SEQ_RELEASE_NO
+# The following config settings can change between loads:
+# 1) SEQ_RELEASE_DATE
+# The following config settings change between genome builds:
+# 1) SEQ_RELEASE_NO
 #
 ###########################################################################
 
@@ -45,19 +45,16 @@ export LOG_PROC LOG_DIAG LOG_CUR LOG_VAL
 #  the application.
 INFILE_NAME=STDIN
 
-# Input file directory 
-INPUTDIR=${DATADOWNLOADS}/ensembl_mus_cdna
-
-# Input file name - must be updated with each load
-APP_INFILES=${INPUTDIR}/Mus_musculus.NCBIM37.56.cdna.all.fa.gz
+# Input file name 
+APP_INFILES=${INPUTDIR}/ensembl_transcripts.gz
 
 # Complete path to config file for assocload
 CONFIG_ASSOCLOAD=${VEGA_ENSEMBLSEQLOAD}/ensembl_transcriptassocload.config
 
 # Path to assocload input file
-INFILE_ASSOCLOAD=${OUTPUTDIR}/ensembl_transcriptmkrassoc.txt
+INFILE_ASSOCLOAD=${OUTPUTDIR}/ensembl_transcript_mkrassoc.txt
 
-export INFILE_NAME INPUTDIR APP_INFILES CONFIG_ASSOCLOAD INFILE_ASSOCLOAD
+export INFILE_NAME APP_INFILES CONFIG_ASSOCLOAD INFILE_ASSOCLOAD
 
 #
 # Ensembl Transcript Sequence Load specific settings
@@ -119,7 +116,7 @@ CONFIG_SEQASSOC=ensembltranscript_seqseqassocload.config
 export CONFIG_SEQASSOC
 
 # Path to the seqseq_assocload input file
-INFILE_SEQASSOCLOAD=${OUTPUTDIR}/ensembltranscript_seqseqassoc.txt
+INFILE_SEQASSOCLOAD=${OUTPUTDIR}/ensembl_transcript_seqseqassoc.txt
 
 # Sequence Association Qualifier term
 QUALIFIER="transcribed from "
