@@ -5,10 +5,10 @@
 #  This file sets up environment variables that are needed for 
 #  processing VEGA protein sequences
 #
-# The following config settings change between loads:
-# 1) APP_INFILES
-# 2) SEQ_RELEASE_DATE
-# 3) SEQ_RELEASE_NO
+# The following config settings can change between loads:
+# 1) SEQ_RELEASE_DATE
+# The following config settings change between genome builds:
+# 1) SEQ_RELEASE_NO
 #
 ###########################################################################
 
@@ -45,19 +45,16 @@ export LOG_PROC LOG_DIAG LOG_CUR LOG_VAL
 #  the application.
 INFILE_NAME=STDIN
 
-# Input file directory 
-INPUTDIR=${DATADOWNLOADS}/vega_mus_protein
-
-# Input file name - must be updated with each load
-APP_INFILES=${INPUTDIR}/Mus_musculus.VEGA37.37.pep.all.fa.gz
+# Input file name 
+APP_INFILES=${INPUTDIR}/vega_proteins.gz
 
 # Complete path to config file for assocload
 CONFIG_ASSOCLOAD=${VEGA_ENSEMBLSEQLOAD}/vega_proteinassocload.config
 
 # Path to assocload input file
-INFILE_ASSOCLOAD=${OUTPUTDIR}/vega_proteinmkrassoc.txt
+INFILE_ASSOCLOAD=${OUTPUTDIR}/vega_protein_mkrassoc.txt
 
-export INFILE_NAME INPUTDIR APP_INFILES CONFIG_ASSOCLOAD INFILE_ASSOCLOAD
+export INFILE_NAME APP_INFILES CONFIG_ASSOCLOAD INFILE_ASSOCLOAD
 
 #
 # VEGA Protein Sequence Load specific settings
@@ -119,7 +116,7 @@ CONFIG_SEQASSOC=vegaprotein_seqseqassocload.config
 export CONFIG_SEQASSOC
 
 # Path to the seqseq_assocload input file
-INFILE_SEQASSOCLOAD=${OUTPUTDIR}/vegaprotein_seqseqassoc.txt
+INFILE_SEQASSOCLOAD=${OUTPUTDIR}/vega_protein_seqseqassoc.txt
 
 # Sequence Association Qualifier term
 QUALIFIER="translated from "
