@@ -1,3 +1,10 @@
+TAG: vega_ensemblseqload-4-3-3-3
+DATE: 03/05/2010
+STAFF: sc
+CHANGES:
+1) Updated some input/output file names and paths
+2) Overall comment update
+
 TAG: vega_ensemblseqload-4-3-3-2
 DATE: 01/24/2010
 STAFF: sc
